@@ -1,0 +1,2 @@
+use Test::PlugAuth::Plugin::Authz;
+run_tests 'Test';
