@@ -1,0 +1,2 @@
+use Test::PlugAuth::Plugin::Refresh;
+run_tests 'Test';
