@@ -7,6 +7,7 @@ use_ok 'PlugAuth::Routes';
 use_ok 'PlugAuth::Plugin::FlatAuth';
 use_ok 'PlugAuth::Plugin::FlatAuthz';
 use_ok 'PlugAuth::Plugin::FlatUserList';
+use_ok 'PlugAuth::Plugin::Test';
 
 use_ok 'PlugAuth::Role::Auth';
 use_ok 'PlugAuth::Role::Authz';
@@ -18,4 +19,4 @@ use_ok 'Test::PlugAuth::Plugin::Auth';
 use_ok 'Test::PlugAuth::Plugin::Authz';
 use_ok 'Test::PlugAuth::Plugin::Refresh';
 
-pass '14th test';
+
